texi2html/test/invalid/res/texi_verb_not_closed/verb_not_closed.texi
\input texinfo @c -*-texinfo-*-

@node Top

texte

@verb{*

In verb

*
*}